--- a/guides.html
+++ b/guides.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<title>Гайды | SK&GS</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Гайды — SK&GS</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <h1>Гайды SK&GS</h1>
+    <nav>
+      <a href="index.html">Главная</a>
+      <a href="guides.html">Гайды</a>
+    </nav>
+  </header>
 
-<header class="header">
-<h1>Гайды</h1>
-<p>Satisfactory</p>
-</header>
+  <main class="container">
+    <section class="card"><h2>🔧 Старт</h2><p>Как начать без ошибок</p></section>
+    <section class="card"><h2>⚙️ Конвейеры</h2><p>Красиво и эффективно</p></section>
+    <section class="card"><h2>🏭 Фабрики</h2><p>Автоматизация на максимум</p></section>
+  </main>
 
-<nav class="nav">
-<a href="index.html">Главная</a>
-<a href="guides.html">Гайды</a>
-</nav>
-
-<main class="container">
-<section class="card">
-<h2>Начало игры</h2>
-<p>Собирай ресурсы и строй фабрики.</p>
-</section>
-</main>
-
-<footer class="footer">© 2025 SK&GS</footer>
+  <footer>© 2025 SK&GS</footer>
 </body>
 </html>
