--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<title>SK&GS | Satisfactory</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>SK&GS — Satisfactory</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <h1>SK&GS</h1>
+    <p>Игровой сайт по Satisfactory</p>
+    <nav>
+      <a href="index.html">Главная</a>
+      <a href="guides.html">Гайды</a>
+    </nav>
+  </header>
 
-<header class="header">
-<h1>SK&GS</h1>
-<p>Игровой сайт по Satisfactory</p>
-</header>
+  <main class="container">
+    <section class="card hero">
+      <h2>Строй. Автоматизируй. Улучшай.</h2>
+      <p>Сайт команды SK&GS для друзей и фабрик.</p>
+      <a class="btn" href="guides.html">🚀 Смотреть гайды</a>
+    </section>
+  </main>
 
-<nav class="nav">
-<a href="index.html">Главная</a>
-<a href="guides.html">Гайды</a>
-</nav>
-
-<main class="container">
-<section class="card">
-<h2>Добро пожаловать</h2>
-<p>Это сайт команды SK&GS по игре Satisfactory.</p>
-</section>
-</main>
-
-<footer class="footer">© 2025 SK&GS</footer>
+  <footer>© 2025 SK&GS</footer>
 </body>
 </html>
