--- a/index.html
+++ b/index.html
@@ -16,12 +16,23 @@
   </header>
 
   <main class="container">
-    <section class="card hero">
-      <h2>Строй. Автоматизируй. Улучшай.</h2>
-      <p>Сайт команды SK&GS для друзей и фабрик.</p>
-      <a class="btn" href="guides.html">🚀 Смотреть гайды</a>
-    </section>
-  </main>
+  <section class="card hero">
+    <h2>Строй. Автоматизируй. Улучшай.</h2>
+    <p>Сайт команды SK&GS для друзей и фабрик.</p>
+    <a class="btn" href="guides.html">🚀 Смотреть гайды</a>
+  </section>
+
+  <h2 style="text-align:center;color:#22c55e;margin-top:60px;">
+    🏭 Наши фабрики
+  </h2>
+
+  <section class="gallery">
+    <img src="images/factory1.jpg">
+    <img src="images/factory2.jpg">
+    <img src="images/base.jpg">
+  </section>
+</main>
+
 
   <footer>© 2025 SK&GS</footer>
 </body>
