--- a/index.html
+++ b/index.html
@@ -6,34 +6,48 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>SK&GS</h1>
-    <p>Игровой сайт по Satisfactory</p>
-    <nav>
-      <a href="index.html">Главная</a>
-      <a href="guides.html">Гайды</a>
-    </nav>
-  </header>
 
-  <main class="container">
+<header>
+  <h1>SK&GS</h1>
+  <p>Игровой сайт по Satisfactory</p>
+  <nav>
+    <a href="index.html">Главная</a>
+    <a href="guides.html">Гайды</a>
+  </nav>
+</header>
+
+<main class="container">
+
   <section class="card hero">
     <h2>Строй. Автоматизируй. Улучшай.</h2>
     <p>Сайт команды SK&GS для друзей и фабрик.</p>
     <a class="btn" href="guides.html">🚀 Смотреть гайды</a>
   </section>
 
-  <h2 style="text-align:center;color:#22c55e;margin-top:60px;">
-    🏭 Наши фабрики
-  </h2>
+  <h2 class="section-title">🏭 Наши фабрики</h2>
 
   <section class="gallery">
-    <img src="images/factory1.jpg">
-    <img src="images/factory2.jpg">
-    <img src="images/base.jpg">
+    <div class="img-card">
+      <img src="images/1.jpg" alt="Фабрика 1">
+      <p>Главная база</p>
+    </div>
+
+    <div class="img-card">
+      <img src="images/2.jpg" alt="Фабрика 2">
+      <p>Конвейерный узел</p>
+    </div>
+
+    <div class="img-card">
+      <img src="images/3.jpg" alt="Фабрика 3">
+      <p>Производство энергии</p>
+    </div>
   </section>
+
 </main>
 
+<footer>
+  © 2025 SK&GS
+</footer>
 
-  <footer>© 2025 SK&GS</footer>
 </body>
 </html>
