--- a/guides.html
+++ b/guides.html
@@ -6,20 +6,37 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Гайды SK&GS</h1>
-    <nav>
-      <a href="index.html">Главная</a>
-      <a href="guides.html">Гайды</a>
-    </nav>
-  </header>
 
-  <main class="container">
-    <section class="card"><h2>🔧 Старт</h2><p>Как начать без ошибок</p></section>
-    <section class="card"><h2>⚙️ Конвейеры</h2><p>Красиво и эффективно</p></section>
-    <section class="card"><h2>🏭 Фабрики</h2><p>Автоматизация на максимум</p></section>
-  </main>
+<header>
+  <h1>Гайды SK&GS</h1>
+  <nav>
+    <a href="index.html">Главная</a>
+    <a href="guides.html">Гайды</a>
+  </nav>
+</header>
 
-  <footer>© 2025 SK&GS</footer>
+<main class="container">
+
+  <section class="card">
+    <h2>🔧 Старт</h2>
+    <p>Как начать игру без ошибок.</p>
+  </section>
+
+  <section class="card">
+    <h2>⚙️ Конвейеры</h2>
+    <p>Красиво и эффективно.</p>
+  </section>
+
+  <section class="card">
+    <h2>🏭 Фабрики</h2>
+    <p>Максимальная автоматизация.</p>
+  </section>
+
+</main>
+
+<footer>
+  © 2025 SK&GS
+</footer>
+
 </body>
 </html>
