--- a/index.html
+++ b/index.html
@@ -27,21 +27,22 @@
   <h2 class="section-title">🏭 Наши фабрики</h2>
 
   <section class="gallery">
-    <div class="img-card">
-      <img src="images/1.jpg" alt="Фабрика 1">
-      <p>Главная база</p>
-    </div>
+  <div class="img-card">
+    <img src="images/images1.jpg" alt="Фабрика 1">
+    <p>Главная база</p>
+  </div>
 
-    <div class="img-card">
-      <img src="images/2.jpg" alt="Фабрика 2">
-      <p>Конвейерный узел</p>
-    </div>
+  <div class="img-card">
+    <img src="images/images2.jpg" alt="Фабрика 2">
+    <p>Конвейерный узел</p>
+  </div>
 
-    <div class="img-card">
-      <img src="images/3.jpg" alt="Фабрика 3">
-      <p>Производство энергии</p>
-    </div>
-  </section>
+  <div class="img-card">
+    <img src="images/images3.jpg" alt="Фабрика 3">
+    <p>Производство энергии</p>
+  </div>
+</section>
+
 
 </main>
 
