--- a/index.html
+++ b/index.html
@@ -27,19 +27,20 @@
   <h2 class="section-title">🏭 Наши фабрики</h2>
 
   <section class="gallery">
+
   <div class="img-card">
     <img src="images/images1.jpg" alt="Фабрика 1">
-    <p>Главная база</p>
+    <p>🏭 Главная база</p>
   </div>
 
   <div class="img-card">
     <img src="images/images2.jpg" alt="Фабрика 2">
-    <p>Конвейерный узел</p>
+    <p>🔗 Конвейерный узел</p>
   </div>
 
   <div class="img-card">
     <img src="images/images3.jpg" alt="Фабрика 3">
-    <p>Производство энергии</p>
+    <p>⚡ Производство энергии</p>
   </div>
 </section>
 
